Fix text overflow2

--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@ body, html {
     
     /* Add the blur effect */
     filter: blur(8px);
-    -webkit-filter: blur(8px);
+    -webkit-filter: blur(4px);
     
     /* Full height */
     height: 100%; 
